# VCPMobile

./: --help  .gitignore  .tmp_plan.py  README.md  check_db.cjs  debug_avatar.html  dev-android.ps1  floating.html  index.html  package.json  patch_apk_16k.py  patch_apk_alignment.py  plan.txt  pnpm-lock.yaml  sign_apk.py  temp_write_doc.cjs  tsconfig.tsbuildinfo  uno.config.ts  vite.config.ts
src-tauri/: Cargo.toml  icon-manifest.json  tauri.conf.json
src-tauri/capabilities/: agent-notifications.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_initial_tables.sql  0002_add_deleted_at_to_message_attachments.sql  0003_create_messages_fts.sql  0004_fix_fts_triggers.sql
src-tauri/plugins/vcp-mobile/: Cargo.toml  build.rs  package.json
src-tauri/plugins/vcp-mobile/android/: build.gradle.kts
src-tauri/plugins/vcp-mobile/guest-js/: index.ts
src-tauri/plugins/vcp-mobile/permissions/: all.toml  default.toml
src-tauri/plugins/vcp-mobile/permissions/schemas/: schema.json
src-tauri/plugins/vcp-mobile/src/: lib.rs  screen.rs  stream.rs  system.rs
src-tauri/src/: lib.rs
src-tauri/src/distributed/: client.rs  mod.rs  telemetry_center.rs  tool_registry.rs  types.rs
src-tauri/src/distributed/tools/: agent_message.rs  ambient_sensor.rs  battery.rs  clipboard.rs  cpu_info.rs  device_info.rs  device_status_summary.rs  frontend_bridge.rs  gpu_info.rs  location.rs  memory_info.rs  mod.rs  motion_sensor.rs  network_info.rs  notification.rs  storage_info.rs  sysfs_utils.rs  topic_memo.rs  topic_sponsor.rs
src-tauri/src/pre_renderer/: markdown_ast.rs  markdown_parser.rs  shell_precomputer.rs
src-tauri/src/vcp_host/: mod.rs
src-tauri/src/vcp_host/native_portal/: mod.rs  window.rs
src-tauri/src/vcp_modules/: agent_chat_application_service.rs  agent_config_manager.rs  agent_config_repository_fs.rs  agent_index_projection_service.rs  agent_regex_projection_service.rs  agent_service.rs  agent_topic_metadata_service.rs  agent_types.rs  app_settings_manager.rs  aurora_pipeline.rs  avatar_color_extractor.rs  avatar_service.rs  chat_manager.rs  content_parser.rs  context_assembler_utils.rs  db_manager.rs  db_write_queue.rs  emoticon_manager.rs  file_manager.rs  frontend_update_manager.rs  group_bootstrap_loader.rs  group_cache_coordinator.rs  group_chat_application_service.rs  group_config_repository_fs.rs  group_context_assembler.rs  group_manager.rs  group_service.rs  group_speaking_policy.rs  group_types.rs  hash_aggregator.rs  history_repository_fs.rs  index_service.rs  lifecycle_manager.rs  maintenance_manager.rs  message_application_service.rs  message_asset_rebaser.rs  message_log_store.rs  message_render_compiler.rs  message_repository.rs  message_repository_db.rs  (+37 more)
src-tauri/src/vcp_modules/agent/: agent_chat_application_service.rs  agent_service.rs  agent_types.rs  avatar_service.rs  mod.rs
src-tauri/src/vcp_modules/chat/: ast_diff.rs  aurora_pipeline.rs  chat_manager.rs  content_parser.rs  context_assembler.rs  context_assembler_utils.rs  context_injection.rs  context_sanitizer.rs  daily_note.rs  emoticon_manager.rs  message_service.rs  mod.rs  stream_block_parser.rs  topic_service.rs  topic_summary_service.rs  topic_types.rs
src-tauri/src/vcp_modules/chat/pre_renderer/: code_highlighter.rs  markdown_ast.rs  markdown_parser.rs  mod.rs
src-tauri/src/vcp_modules/group/: group_chat_application_service.rs  group_context_assembler.rs  group_service.rs  group_speaking_policy.rs  group_types.rs  mod.rs
src-tauri/src/vcp_modules/infra/: file_extractor.rs  file_manager.rs  high_speed_channel.rs  lifecycle_controller.rs  lifecycle_manager.rs  lifecycle_reconciler.rs  lifecycle_state.rs  local_server.rs  maintenance_manager.rs  mod.rs  model_manager.rs  protocol_manager.rs  settings_manager.rs  utils.rs  vcp_client.rs  vcp_info_service.rs  vcp_log_service.rs
src-tauri/src/vcp_modules/infra/media_processor/: audio_extractor.rs  ffmpeg_cli.rs  image_extractor.rs  mod.rs  video_extractor.rs
src-tauri/src/vcp_modules/ipc/: agent_handlers.rs  group_chat_handler.rs  group_handlers.rs  mod.rs  settings_handlers.rs  sync_handlers.rs
src-tauri/src/vcp_modules/media_processor/: audio_extractor.rs  ffmpeg_cli.rs  image_extractor.rs  mod.rs  video_extractor.rs
src-tauri/src/vcp_modules/media_processor/assets/: README.md
src-tauri/src/vcp_modules/persistence/: db_manager.rs  db_write_queue.rs  message_repository.rs  mod.rs
src-tauri/src/vcp_modules/pre_renderer/: code_highlighter.rs  markdown_ast.rs  markdown_parser.rs  mod.rs  shell_precomputer.rs
src-tauri/src/vcp_modules/sync/: mod.rs  sync_dto.rs  sync_finalize.rs  sync_hash.rs  sync_logger.rs  sync_service.rs  sync_types.rs
src-tauri/src/vcp_modules/sync/sync_executor/: batch_diff_handler.rs  delete_executor.rs  diff_handler.rs  mod.rs  (+2 more)
src-tauri/src/vcp_modules/sync_executor/: delete_executor.rs  mod.rs  pull_executor.rs  push_executor.rs
src-tauri/src/vcp_modules/sync_manifest/: manifest_builder.rs  manifest_diff.rs  mod.rs
src-tauri/src/vcp_modules/sync_pipeline/: mod.rs  phase1_metadata.rs  phase2_topic.rs  phase3_message.rs  pipeline.rs  pipeline_state.rs
src-tauri/src/vcp_modules/updater/: frontend_update_manager.rs  mod.rs  ota_assets.rs  update_manager.rs
(+373 files in other folders)
