[package]
name = "vcp-mobile"
version = "0.9.13"
description = "A Tauri App"
authors = ["MRiecy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vcp_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.android.build_targets]
targets = ["aarch64-linux-android"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
url = "2"
dashmap = "6"
tokio-util = { version = "0.7", features = ["codec"] }
scraper = "0.19"
ego-tree = "0.6"
lru = "0.12"
fancy-regex = "0.13"
regex = "1"
lazy_static = "1.4"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
scopeguard = "1.2"
log = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
notify = "6"
notify-debouncer-full = "0.3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
semver = "1"
thiserror = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
md5 = "0.7"
tauri-plugin-log = "2"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
mime_guess = "2"
tauri-utils = "2"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1"
libc = "0.2"
percent-encoding = "2"
urlencoding = "2"

[profile.release]
opt-level = 3   # 最高级别的代码优化
lto = true      # 启用链接时优化
codegen-units = 1   # 限制并行编译单元来提供更多的全局优化机会
panic = "abort" # 移除异常展开代码，减小体积
strip = true    # 移除符号信息，显著减小安装包大小
