[package]
name = "tauri-plugin-vcp-mobile"
version = "1.0.0"
authors = ["MRiecy"]
description = "VCP Mobile Android native capabilities plugin"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-vcp-mobile"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.6.2" }
